# sysrepo-rs

./: Cargo.toml  README.md  build.rs  wrapper.h
examples/application_changes/: Cargo.toml
examples/application_changes/src/: main.rs
examples/notif_send/: Cargo.toml
examples/notif_send/src/: main.rs
examples/notif_subscribe/: Cargo.toml
examples/notif_subscribe/src/: main.rs
examples/oper_data/: Cargo.toml
examples/oper_data/src/: main.rs
examples/rpc_send/: Cargo.toml
examples/rpc_send/src/: main.rs
examples/rpc_subscribe/: Cargo.toml
examples/rpc_subscribe/src/: main.rs
examples/sr_get_data/: Cargo.toml
examples/sr_get_data/src/: main.rs
examples/sr_get_items/: Cargo.toml
examples/sr_get_items/src/: main.rs
examples/sr_set_item/: Cargo.toml
examples/sr_set_item/src/: main.rs
examples/utils/: Cargo.toml
examples/utils/src/: lib.rs
src/: lib.rs
